--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,28 @@
-<h1>Orbit Report</h1>
+<body>
 
-<div class="search-form">
-	Search: <input #searchTerm type="text" (keyup.enter)="search(searchTerm.value);" name="searchTerm"/>
-	<button (click)="search(searchTerm.value);">Search</button>
-</div>
 
-<app-orbit-counts [satellites]="displayList"></app-orbit-counts>
+	<h1>Orbit Report</h1>
+	<app-orbit-list [satellites]="displayList"></app-orbit-list>
+	<app-orbit-counts [satellites]="displayList"></app-orbit-counts>
+
+
+
+
+
+
+
+
+
+	<div class="search-form">
+		Search: <input #searchTerm type="text" (keyup.enter)="search(searchTerm.value);" name="searchTerm" />
+		<button (click)="search(searchTerm.value);">Search</button>
+	</div>
+</body>
+
+
+
+
+
 
 <!-- TODO 1: add list component to app HTML -->
+<!-- To have the satellite table displayed, add the orbit-list component tag to the app HTML. -->
